--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>lilpal</title>
 </head>
 <body>
+    <section class="hero-section">
+
+        <div class="header">
+            <div class="left-side">
+                <img src="Img/logo.png" alt="">
+                <div class="social-icons">
+                    
+                </div>
+            </div>
+        <div class="hero-content">
+
+        </div>
+
+        </div>
+    </section>
     
 </body>
 </html>
