add top left-side banner

--- a/index.html
+++ b/index.html
@@ -12,8 +12,21 @@
             <div class="left-side">
                 <img src="Img/logo.png" alt="">
                 <div class="social-icons">
-                    
+                <img src="Img/twitter.png" alt=""> 
+                <img src="Img/instagram.png" alt="">
+                <img src="Img/youtube.png" alt="">   
                 </div>
+            </div>
+            <div class="left-side">
+                <ul>
+                    <li><a href="">Adopt a pet</a></li>
+                    <li><a href="">Pages</a></li>
+                    <li><a href="">Post Layouts</a></li>
+                    <li><a href="">Post Features</a></li>
+                    <li><a href="">News</a></li>
+                    <li><a href="">Events</a></li>
+                    <li><a href="">Purchase</a></li>
+                </ul>
             </div>
         <div class="hero-content">
 
