--- a/index.html
+++ b/index.html
@@ -3,37 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lilpal</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Lil Pal</title>
 </head>
 <body>
     <section class="hero-section">
 
         <div class="header">
             <div class="left-side">
-                <img src="Img/logo.png" alt="">
-                <div class="social-icons">
-                <img src="Img/twitter.png" alt=""> 
-                <img src="Img/instagram.png" alt="">
-                <img src="Img/youtube.png" alt="">   
-                </div>
+                <img src="img/logo.png" alt="">
+                <!-- <div class="social-icons">
+                    <img src="img/twitter.png" alt="">
+                    <img src="img/instagram.png" alt="">
+                    <img src="img/youtube.png" alt="">
+                </div> -->
             </div>
-            <div class="left-side">
+
+            <div class="right-side">
                 <ul>
-                    <li><a href="">Adopt a pet</a></li>
-                    <li><a href="">Pages</a></li>
-                    <li><a href="">Post Layouts</a></li>
-                    <li><a href="">Post Features</a></li>
-                    <li><a href="">News</a></li>
-                    <li><a href="">Events</a></li>
-                    <li><a href="">Purchase</a></li>
+                    <li>
+                        <a href="">Adopt a Pet</a>
+                    </li>
+
+                    <li>
+                        <a href="">Pages</a>
+                    </li>
+
+                    <li>
+                        <a href="">Post Layout</a>
+                    </li>
+
+                    <li>
+                        <a href="">Post Features</a>
+                    </li>
+
+                    <li>
+                        <a href="">News</a>
+                    </li>
+
+                    <li>
+                        <a href="">Events</a>
+                    </li>
+
+                    <li>
+                        <a href="">Purchase</a>
+                    </li>
                 </ul>
+                <button class="btn-primary">Donate</button>
             </div>
+        </div>
+
         <div class="hero-content">
 
         </div>
 
-        </div>
     </section>
-    
 </body>
 </html>
